#77 Run Findbugs analysis to check for bugs